Update Pufferfish to support Paper 26.1.2 and enhance build configurations
- Updated Gradle wrapper to version 9.4.1.
- Changed Paperweight plugin version to 2.0.0-beta.21.
- Updated Java toolchain to version 25 and adjusted encoding settings.
- Enhanced .gitignore to include additional build artifacts and cache directories.
- Refactored configuration handling in PufferfishConfig and ServerConfigurations for improved clarity and functionality.
- Removed deprecated Long2ObjectOpenHashMapWrapper class.
- Updated Flare setup to include OS checks for compatibility.
- Adjusted various dependencies and configurations to align with Paper 26.1.2 changes.